Add core structure gor home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+        <header>Header Content</header>
+
+        <section>
+            Main image
+        </section>
+        <section>
+            Club Ehos
+        </section>
+        <section>
+            Running Locations, distances and times
+        </section>
+
+        <footer>Social Media Accounts</footer>
 </body>
 </html>
