Add hero image and animation for zoom

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         </nav>
     </header>
 
-    <section>
-        Main image
+    <section id="hero-outer">
+        <div id="hero-image">
+
+        </div>
     </section>
     <section>
         Club Ehos
