--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
             <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
-    <section>
-        Club Ehos
+    <section id="club-ethos">
+        <h1>Why Love Running with us?</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
+     
     </section>
     <section>
         Running Locations, distances and times
