--- a/index.html
+++ b/index.html
@@ -87,35 +87,35 @@
     </section>
     <section id="times">
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fas fa-city"></i></h2>
             <h3>Monday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail<i class="fas fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>19k</h3>
             <h3>The Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fas fa-city"></i></h2>
             <h3>Friday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffee</h2>
+            <h2>Coffee <i class="fas fa-coffee"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Phoenix Park</h3>
@@ -123,7 +123,18 @@
         </div>
     </section>
 
-    <footer>Social Media Accounts</footer>
+
+    <footer>
+        <ul class="social-networks">
+            <li>
+               <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in new tab"><i class="fab fa-facebook"></i></a> 
+            </li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in new tab"><i class="fab fa-twitter"></i></i></a> </li>
+            <li><a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in new tab"><i class="fab fa-youtube"></i></i></a> </li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in new tab"><i class="fab fa-instagram"></i></a> </li>
+            <li></li>
+        </ul>
+    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
