--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
         <nav id="menu">
             <ul>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
