--- a/gallery.html
+++ b/gallery.html
@@ -1,58 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running club for runners in Dublin, Ireland">
-    <meta name="keywords" content="love running, running club, ireland, dublin">
-
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width">
     <title>Love Running</title>
-</head>
+     <link href="index.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+   <header>
+       <a href="index.html"> 
+           <h2 id="logo">Love Running</h2>
+       </a>
+       <nav>
+           <ul id="menu">
+               <li>
+                    <a href="signup.html">Sign Up</a>
+               </li>
+                <li> 
+                    <a class="active" href="gallery.html">Gallery</a>
+               </li>
+                <li>
+                    <a  href="index.html">Home</a>
+               </li>
 
-<body>
-    <header>
-        <a href="index.html">
-            <h1 id="logo">Love Running</h1>
-        </a>
-        <nav id="menu">
-            <ul>
-                <li><a href="signup.html">Sign Up</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
-    </header>
+           </ul>
+       </nav>
+   </header>
+   <section id="photo">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/athletes.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/girls.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/runner3.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/man.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/runner1.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/runner2.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/runner4.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/running_gang.jpg">
+        <img src="https://codeinstitute.s3.amazonaws.com/CSSEssentials/love-running-2.0/mud-run.jpg">
+        
 
-    <section id="photos">
-        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
-        <img src="assets/images/girls.jpg" alt="Three girls at a charity paint festival">
-        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging on a beach">
-        <img src="assets/images/man.jpg" alt="Man at charity paint festival">
-        <img src="assets/images/runner1.jpg" alt="Solo female runner jogging through Phoenix Park">
-        <img src="assets/images/runner2.jpg" alt="Runners competing in Dublin Marathon">
-        <img src="assets/images/runner4.jpg" alt="Solo male runner jogging on a beach">
-        <img src="assets/images/running_gang.jpg" alt="Large group of runners taking part in a martahon on a rainy day">
-        <img src="assets/images/mud-run.jpg" alt="Two women runners takinga a selfie after a charity mud run championship">
-    </section>
-
-
-    <footer>
-        <ul class="social-networks">
-            <li>
-               <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in new tab"><i class="fab fa-facebook"></i></a> 
-            </li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in new tab"><i class="fab fa-twitter"></i></i></a> </li>
-            <li><a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in new tab"><i class="fab fa-youtube"></i></i></a> </li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in new tab"><i class="fab fa-instagram"></i></a> </li>
-            <li></li>
-        </ul>
-    </footer>
-
-    <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
-</body>
-
+   </section>
+   
+   <footer>
+       <ul class="social-networks">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i> </a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i> </a></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i> </a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i> </a></li>
+       </ul>
+   </footer>
+   <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
+  </body>
 </html>
