--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running club for runners in Dublin, Ireland">
+    <meta name="description" content="Love Running club for runners in Dublin, Ireland.">
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Stylesheet -->
+    <link href="index.css" rel="stylesheet" type="text/css" />
+    
     <title>Love Running</title>
+
 </head>
 
 <body>
@@ -17,15 +19,21 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
-        <nav id="menu">
-            <ul>
-                <li><a href="signup.html">Sign Up</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="signup.html">Sign Up</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a class="active" href="index.html">Home</a>
+                </li>
+
             </ul>
         </nav>
     </header>
-
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="cover-text">
@@ -34,10 +42,10 @@
         </div>
     </section>
     <section id="club-ethos">
-        <h2 id="welcome">Why Love Running with us?</h2>
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy<i class="fas fa-heartbeat"></i></h2>
+                <h2>Feel Healthy <i class="fas fa-heartbeat"></i></h2>
                 <hr>
                 <p>
                     Since it improves aerobic fitness, running is a great way to help improve your cardiovascular
@@ -48,19 +56,16 @@
                 <h2>Feel Free <i class="fab fa-fly"></i></h2>
                 <hr>
                 <p>
-                    hysical exercise, running included, is known to release endorphins in the brain. Endorphins make
+                    Physical exercise, running included, is known to release endorphins in the brain. Endorphins make
                     you more energetic, more awake and, yes, happier.
                 </p>
             </div>
-
         </div>
-
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social<i class="fas fa-globe"></i></h2>
+                <h2>Get Social <i class="fas fa-globe"></i></h2>
                 <hr>
                 <p>
-
                     When we run with others, we can run farther and faster more easily. Social running can pull you out
                     of a running funk or low mood, inspire you to try new events.
                 </p>
@@ -72,72 +77,61 @@
                     Running strengthens your heart by pumping blood more effectively through your body.
                 </p>
             </div>
-
         </div>
-
         <div id="center-about">
             <div id="circle-container">
-                <div id="circle-cover-bg">
-
-                </div>
+                <div id="circle-cover-bg"></div>
             </div>
-
         </div>
-
     </section>
     <section id="times">
         <div>
             <h2>Urban <i class="fas fa-city"></i></h2>
             <h3>Monday</h3>
-            <h3>5k</h3>
+            <h3>5K</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail<i class="fas fa-tree"></i></h2>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Wednesday</h3>
-            <h3>19k</h3>
+            <h3>10K</h3>
             <h3>The Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
             <h2>Urban <i class="fas fa-city"></i></h2>
             <h3>Friday</h3>
-            <h3>5k</h3>
+            <h3>5K</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
             <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Saturday</h3>
-            <h3>10k</h3>
+            <h3>10K</h3>
             <h3>The Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffee <i class="fas fa-coffee"></i></h2>
+            <h2>Coffee <i class="fas fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
-            <h3>0k</h3>
-            <h3>The Phoenix Park</h3>
-            <h3>09:30</h3>
+            <h3>0K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>11:30</h3>
         </div>
     </section>
-
-
     <footer>
         <ul class="social-networks">
-            <li>
-               <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in new tab"><i class="fab fa-facebook"></i></a> 
-            </li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in new tab"><i class="fab fa-twitter"></i></i></a> </li>
-            <li><a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in new tab"><i class="fab fa-youtube"></i></i></a> </li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in new tab"><i class="fab fa-instagram"></i></a> </li>
-            <li></li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </footer>
 
-    <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+    <!-- Font awesome script -->
+    <script src="https://kit.fontawesome.com/b83175b9a4.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
