--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +8,7 @@
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
     <!-- Stylesheet -->
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     
     <title>Love Running</title>
 
